--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Jasper's Page</title>
   </head>
   <body>
-    <p>Lian says <a href="liankwang.github.io">what</a>?</p>
+    <p>Lian says <a href="http://liankwang.github.io">what</a>?</p>
   </body>
 </html>
