--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jasper's Page</title>
+    <title>Jasper Shogren-Knaak</title>
   </head>
   <body>
     <p>Lian says <a href="http://liankwang.github.io">what</a>?</p>
