--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function copy(dest, source) {
 
 <div class="row">
 <div class="col-sm-5">
-<a href="images/photov4.jpg">
+<a href="images/Untitled.png">
 <img class="img-responsive" style="max-height:400px;" src="images/photov4.jpg"/>
 </a>
 </div>
