--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Shuangping Li</title>
+    <title>Jasper</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Shuangping Li">
