--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function copy(dest, source) {
 <div class="row">
 <div class="col-sm-5">
 <a href="images/Untitled.png">
-<img class="img-responsive" style="max-height:400px;" src="images/photov4.jpg"/>
+<img class="img-responsive" style="max-height:400px;" src="images/Untitled.png"/>
 </a>
 </div>
 
