--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Shuangping Li">
-    <meta name="keywords" content="Shuangping Li, Shuangping Li Princeton, Shuangping Li math, Shuangping Li Stanford, Shuangping Li statistics, 李双平, 李双平 普林斯顿, 李双平 数学, 李双平 统计, 李双平 斯坦福">
+    <meta name="keywords" content="Jasper Shogren-Knaak, Jasper Shogren-Knaak nyu, Jasper Shogren-Knaak math, Jasper Shogren-Knaak Stanford, 刘丘雨">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="I am a Stein Fellow in the Department of Statistics at Stanford University.">
+    <meta name="description" content="I am a graduate student in mathematics at the Courant Institute of Mathematical Sciences.">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" media="screen,print" href="css/style.css" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
