--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function copy(dest, source) {
 
 <div class="col-sm-7">
 <div class="clearfix visible-xs-block"></div>
-<h1>Jasper Shogren-Knaak<span style="font-family:STFangsong; font-size:20pt"> <a href="chinese.html">(李双平)</a></span></h1>
+<h1>Jasper Shogren-Knaak<span style="font-family:STFangsong; font-size:20pt"> <a href="chinese.html">(刘丘雨)</a></span></h1>
 
 
 
