--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 
 <head>
-    <title>Jasper</title>
+    <title>Jasper Shogren-Knaak</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Shuangping Li">
+    <meta name="author" content="Jasper Shogren-Knaak">
     <meta name="keywords" content="Jasper Shogren-Knaak, Jasper Shogren-Knaak nyu, Jasper Shogren-Knaak math, Jasper Shogren-Knaak Stanford, 刘丘雨">
     <meta name="robots" content="index,follow">
     <meta name="description" content="I am a graduate student in mathematics at the Courant Institute of Mathematical Sciences.">
