--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" media="screen,print" href="css/style.css" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
-	<link rel="icon" type="image/jpeg" href="images/CourantLogo.jpeg">
+	<link rel="icon" type="image/jpeg" href="./images/CourantLogo.jpeg">
 
 </head>
 
