--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ function copy(dest, source) {
 -->
 
 
-<a href="https://statistics.stanford.edu/">Department of Statistics</a> <br>
-<a href="https://www.stanford.edu/">Stanford University</a>
+<a href="https://cims.nyu.edu/dynamic/">Courant Institute of Mathematical Sciences</a> <br>
+<a href="https://www.nyu.edu">New York University</a>
 <br>
 <br>
 <b>Email</b>: <tt>&#102;&#105;&#102;&#97;&#108;&#115;&#112;&commat;&#115;&#116;&#97;&#110;&#102;&#111;&#114;&#100;&period;&#101;&#100;&#117;</tt> <br>
