--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ I am a Stein Fellow in the <a href="https://statistics.stanford.edu/">Department
             paper_count += 1
         }
 
-        document.write("<h2>Research</h2>")
+        document.write("<h2>Papers</h2>")
         document.write("<ul>")
 
         add_paper("A trace theorem for Sobolev spaces on the Sierpinski gasket",
