--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@ function copy(dest, source) {
 </div>
 -->
 
-
+<p style="font-size: 18px">Graduate student in Mathematics <br>
+<a href="https://cims.nyu.edu/dynamic/">Courant Institute of Mathematical Sciences</a> <br>
+<a href="https://www.nyu.edu">New York University</a>
+<br>
+<br>
+<b>Email</b>: jasper.shogren-knaak [at] cims.nyu.edu <br>
+<!--<b>Office</b>: TBD <br>-->
+<br>
+	
 <a href="https://cims.nyu.edu/dynamic/">Courant Institute of Mathematical Sciences</a> <br>
 <a href="https://www.nyu.edu">New York University</a>
 <br>
