--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function copy(dest, source) {
 <br>
 <br>
 <b>Email</b>: jasper.shogren-knaak [at] cims.nyu.edu <br>
-<!--<b>Office</b>: TBD <br>-->
+<b>Office</b>: TBD <br>
 <br>
 
 </div>
