--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function copy(dest, source) {
 
 
 <p>
-I am a Stein Fellow in the <a href="https://statistics.stanford.edu/">Department of Statistics</a> at Stanford University. I obtained my PhD degree in <a href="https://www.pacm.princeton.edu/">Applied and Computational Mathematics</a> from Princeton University in May 2022 under the supervision of Professor <a href="https://web.math.princeton.edu/~asly/">Allan Sly</a> and Professor <a href="https://web.math.princeton.edu/~eabbe/">Emmanuel Abbe</a>. Prior to Princeton, I received my Bachelor of Science in Mathematics from <a href="https://www.hku.hk/">University of Hong Kong</a>. My research focuses on probability theory and theoretical machine learning.
+I am a first year graduate student in the <a href="https://statistics.stanford.edu/">Department of Mathematics</a> at the Courant Institute. Prior to Courant, I received my Bachelor of Science in Mathematics from <a href="https://mathematics.stanford.edu">Stanford University</a>. My research focuses on probability theory and theoretical machine learning.
 <br>
 </p>
 
