--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function copy(dest, source) {
 
 
 <p>
-I am a first year graduate student in the <a href="https://statistics.stanford.edu/">Department of Mathematics</a> at the Courant Institute. Prior to Courant, I received my Bachelor of Science in Mathematics from <a href="https://mathematics.stanford.edu">Stanford University</a>. My research focuses on probability theory and theoretical machine learning.
+I am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <a href="https://cims.nyu.edu/dynamic/">Courant Institute</a>. Prior to Courant, I received my Bachelor of Science in Mathematics from <a href="https://mathematics.stanford.edu">Stanford University</a>. My research focuses on probability theory and theoretical machine learning.
 <br>
 </p>
 
