--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ My research focuses on probability theory and partial differential equations, in
                 list_entry += " <a href=\"" + slides + "\"><span class=\"label label-info\">slides/poster</span></a>"
 
             if (talk != null)
-                list_entry += " <a href=\"" + talk + "\">[video]</a>
+                list_entry += " <a href=\"" + talk + "\">[video]</a>"
 
             list_entry += "<br>"
 
