--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ My research focuses on probability theory and partial differential equations, in
             list_entry += "<b>" + title + "</b>"
             if (link != null)
                 list_entry += "</a>"
-            list_entry += "<br>" + authors + ".<br>" + conference
+            list_entry += "<br>" + authors + ".<br>" + conference + ".<br>"
 
             if (bib != null) {
                 list_entry += "<div id=\"bib" + paper_count + "\" style=\"display:none\">" + bib + "</div>"
