--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ My research focuses on probability theory and partial differential equations, in
             if (msg != null)
                 list_entry += "<i>" + msg + "</i>"
 
-            list_entry +=".</li>" + "<div id=\"div" + paper_count + "\" style=\"font-size:18px\"></div><br>"
+            list_entry +="</li>" + "<div id=\"div" + paper_count + "\" style=\"font-size:18px\"></div><br>"
 
             document.write(list_entry)
 
