--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function copy(dest, source) {
 
 
 <p>
-hhI am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <a href="https://cims.nyu.edu/dynamic/">Courant Institute</a>. I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. Prior to Courant, I did my undergraduate studies at <a href="https://www.stanford.edu">Stanford University</a>. 
+I am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <a href="https://cims.nyu.edu/dynamic/">Courant Institute</a>. I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. Prior to Courant, I did my undergraduate studies at <a href="https://www.stanford.edu">Stanford University</a>. 
 <br>
 <br>
 My research focuses on probability theory and partial differential equations, in particular in their applications to statistical mechanics. One particular area of interest is problems that require an understanding of many length scales.
