--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <style>
-.red { 
+.button { 
  color : #f00; text-decoration : none;
   
   .green:link{
@@ -161,7 +161,7 @@ My research focuses on probability theory and partial differential equations, in
                 list_entry += " <a href=\"" + slides + "\"><span class=\"label label-info\">slides/poster</span></a>"
 
             if (talk != null)
-                list_entry += " <a href=\"" + talk + "\" class = \"red\" >[video]</a>"
+                list_entry += " <a href=\"" + talk + "\" class = \"button\" >[video]</a>"
 
             list_entry += "<br>"
 
