--- a/index.html
+++ b/index.html
@@ -17,27 +17,14 @@
 
 </head>
 
+<!-- code for button colors-->
 <style>
 .button { 
- color : #f00; text-decoration : none;
+ color : #1b346c; text-decoration : none;
   
   .green:link{
     display:none;
   }
-}
-
-.green { 
- color : #0f0; text-decoration : none;
-}
-  
-.green:hover{
-  color: #black;
-  text-decoration: underline;
-  
-}
-
-.blue { 
- color : #00f; text-decoration : none;
 }
 
 </style>
