--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@ My research focuses on probability theory and partial differential equations, in
                 list_entry += "<a href=\"javascript:copy(div" + paper_count + ",abstract" + paper_count + ")\"> <span class=\"label label-mrdred\">abstract</span></a>"
             }
             if (arxiv_link != null)
-                list_entry += " <a href=\"" + arxiv_link + "\"><span class=\"label label-mrdgreen\">arXiv</span></a>"
+                list_entry += " <a href=\"" + arxiv_link + "\" class = \"button\" >[arXiv]</a>"
 
             if (journal_link != null)
-                list_entry += " <a href=\"" + journal_link + "\"><span class=\"label label-mrdpurple\">journal</span></a>"
+                list_entry += " <a href=\"" + journal_link + "\" class = \"button\" >[journal]</a>"
 
             if (data != null)
                 list_entry += " <a href=\"" + data + "\"><span class=\"label label-default\">data</span></a>"
 
             if (slides != null)
-                list_entry += " <a href=\"" + slides + "\"><span class=\"label label-info\">slides/poster</span></a>"
+                list_entry += " <a href=\"" + slides + "\" class = \"button\" >[slides]</a>"
 
             if (talk != null)
                 list_entry += " <a href=\"" + talk + "\" class = \"button\" >[video]</a>"
