--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
   }
 }
 
+.button:hover {
+  color : #1b346c; text-decoration : none;
+  
+  .green:link{
+    display:none;
+  }
+}
+	
 </style>
 	
 <script>
