--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 }
 
 .button:hover {
-  color : #1b346c; text-decoration : none;
+  color : #1b346c; text-decoration : underline;
   
   .green:link{
     display:none;
