--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ My research focuses on probability theory and partial differential equations, in
                 list_entry += " <a href=\"" + slides + "\" class = \"button\" >[slides]</a>"
 
             if (talk != null)
-                list_entry += " <a href=\"" + talk + "\" class = \"button\" >[video]</a>"
+                list_entry += " <a href=\"" + talk + "\" class = \"button\" >[talk]</a>"
 
             list_entry += "<br>"
 
