--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ My research focuses on probability theory and partial differential equations, in
         function add_paper(title, authors, conference, link, bib, abstract, arxiv_link, journal_link, data, slides, talk, msg) {
             list_entry = "<li style=\"font-size:18px\">"
             if (link != null)
-                list_entry += "<a href=\"" + link + "\">"
+                <!--list_entry += "<a href=\"" + link + "\">"-->
             list_entry += "<b>" + title + "</b>"
             if (link != null)
                 list_entry += "</a>"
