--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ My research focuses on probability theory and partial differential equations, in
         document.write("<ul>")
 
         add_paper("A trace theorem for Sobolev spaces on the Sierpinski gasket",
-            "Joint work with <a href="http://www.jacopoborga.com">Jacopo Borga</a> and <a href="https://www.mit.edu/~skycao/">Sky Cao</a>",
+            "Joint work with <a href=\"http://www.jacopoborga.com\">Jacopo Borga</a> and <a href=\"https://www.mit.edu/~skycao/\">Sky Cao</a>",
             "<i>Commun. Pure Appl. Anal.</i> (2020)",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
             "test",
