--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- code for button colors-->
 <style>
 .button { 
- color : #f54b1a; text-decoration : none;
+ color : #f08229; text-decoration : none;
   
   .green:link{
     display:none;
@@ -28,7 +28,7 @@
 }
 
 .button:hover {
-  color : #f54b1a; text-decoration : underline;
+  color : #f08229; text-decoration : underline;
   
   .green:link{
     display:none;
