--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@ I have a twin sister <a href="https://lsn235711.github.io/">Shuangning Li</a>. S
 </p>
 
 <hr>
-Last update: 2023/08. Template adapted from <a href="https://www.cs.princeton.edu/~danqic">Danqi Chen</a>'s.
+Website adapted from <a href="https://www.cs.princeton.edu/~danqic">Danqi Chen</a>'s and <a href="https://fifalsp.github.io">Shuangping Li</a>'s.
 <br>
-<a href="chinese.html">中文版</a>
+<!--<a href="chinese.html">中文版</a>-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </div>
