--- a/index.html
+++ b/index.html
@@ -177,7 +177,14 @@ My research focuses on probability theory and partial differential equations, in
             "Joint work with <a href=\"http://www.jacopoborga.com\">Jacopo Borga</a> and <a href=\"https://www.mit.edu/~skycao/\">Sky Cao</a>",
             "<i>Commun. Pure Appl. Anal.</i> (2020)",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
-            "test",
+            "@misc\{cao2023random,
+      title=\{Random surfaces and lattice Yang-Mills\}, 
+      author=\{Sky Cao and Minjae Park and Scott Sheffield\},
+      year=\{2023\},
+      eprint=\{2307.06790\},
+      archivePrefix=\{arXiv\},
+      primaryClass=\{id=\'math.PR\' full_name=\'Probability\' is_active=True alt_name=None in_archive=\'math\' is_general=False description=\'Theory and applications of probability and stochastic processes: e.g. central limit theorems, large deviations, stochastic differential equations, models from statistical mechanics, queuing theory\'\}
+\}",
             "We give a discrete characterization of the trace of a class of Sobolev spaces on the Sierpinski gasket to the bottom line. This includes the L2 domain of the Laplacian as a special case. In addition, for Sobolev spaces of low orders, including the domain of the Dirichlet form, the trace spaces are Besov spaces on the line.",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
