--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function copy(dest, source) {
 
 
 <p>
-hI am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <a href="https://cims.nyu.edu/dynamic/">Courant Institute</a>. I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. Prior to Courant, I did my undergraduate studies at <a href="https://www.stanford.edu">Stanford University</a>. 
+I am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <a href="https://cims.nyu.edu/dynamic/">Courant Institute</a>. I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. Prior to Courant, I did my undergraduate studies at <a href="https://www.stanford.edu">Stanford University</a>. 
 <br>
 <br>
 My research focuses on probability theory and partial differential equations, in particular in their applications to statistical mechanics. One particular area of interest is problems that require an understanding of many length scales.
@@ -177,7 +177,7 @@ My research focuses on probability theory and partial differential equations, in
             "Joint work with <a href=\"http://www.jacopoborga.com\">Jacopo Borga</a> and <a href=\"https://www.mit.edu/~skycao/\">Sky Cao</a>",
             "<i>Commun. Pure Appl. Anal.</i> (2020)",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
-            "test}'",
+            "test}',",
             "We give a discrete characterization of the trace of a class of Sobolev spaces on the Sierpinski gasket to the bottom line. This includes the L2 domain of the Laplacian as a special case. In addition, for Sobolev spaces of low orders, including the domain of the Dirichlet form, the trace spaces are Besov spaces on the line.",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
