--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ My research focuses on probability theory and partial differential equations, in
             "Joint work with <a href=\"http://www.jacopoborga.com\">Jacopo Borga</a> and <a href=\"https://www.mit.edu/~skycao/\">Sky Cao</a>",
             "<i>Commun. Pure Appl. Anal.</i> (2020)",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
-            "misc{cao2023random,<br>title={Random surfaces and lattice Yang-Mills},<br>author={Sky Cao and Minjae Park and Scott Sheffield},<br>year={2023},<br>eprint={2307.06790},<br>archivePrefix={arXiv},<br>primaryClass={math.PR}<br>}",
+            "@misc{cao2023random,<br>title={Random surfaces and lattice Yang-Mills},<br>author={Sky Cao and Minjae Park and Scott Sheffield},<br>year={2023},<br>eprint={2307.06790},<br>archivePrefix={arXiv},<br>primaryClass={math.PR}<br>}",
             "We give a discrete characterization of the trace of a class of Sobolev spaces on the Sierpinski gasket to the bottom line. This includes the L2 domain of the Laplacian as a special case. In addition, for Sobolev spaces of low orders, including the domain of the Dirichlet form, the trace spaces are Besov spaces on the line.",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159",
