--- a/index.html
+++ b/index.html
@@ -207,20 +207,10 @@ My research focuses on probability theory and partial differential equations, in
         <span style="font-family: Lato; font-size:17px;">Instructor:</span>
         <li>STATS218 Introduction to Stochastic Processes II, Spring 2024.
         </li>
-        <li>STATS317 Stochastic Processes, Winter 2024.
-        </li>
-        <li>STATS218 Introduction to Stochastic Processes II, Spring 2023.
-        </li>
-        <li>STATS116 Theory of Probability, Fall 2022.
-        </li>
         <br>
         
         <span style="font-family: Lato; font-size:17px;">Assistant instructor:</span>
         <li>MAT100 Calculus Foundations, Fall 2020.
-        </li>
-        <li>MAT201 Multivariable Calculus, Fall 2019.
-        </li>
-        <li>MAT202 Linear Algebra with Applications, Spring 2019.
         </li>
     </ul>
 
@@ -228,19 +218,25 @@ My research focuses on probability theory and partial differential equations, in
 
 <h2>Services</h2>
 <ul>
-    <li><a href="https://statistics.stanford.edu/events/statistics-seminar">Stanford Statistics Seminar</a> (Organizer: Winter 2023, Winter 2024, Summer 2024).
-    </li>
     <li><a href="https://statistics.stanford.edu/events/probability-seminar">Stanford Probability Seminar</a> (Organizer: Spring 2023).
     </li>
 </ul>
 
 <hr>
 
+    <h2> Notes and Expository Writing</h2>
+    <ul>
+        <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
+        </li>
+    </ul>
 
-    <h2>Miscellaneous</h2>
-<p>
-I have a twin sister <a href="https://lsn235711.github.io/">Shuangning Li</a>. She graduated from Stanford University and is at Harvard University now. She works in statistics. Here is a <a href="https://lsn235711.github.io/misc.html">quiz</a> on my sister's website: Can you tell us apart?
-</p>
+<hr>
+
+    <h2> Squibs</h2>
+    <ul>
+        <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Why Peanut Butter is the Best</a>.
+        </li>
+    </ul>
 
 <hr>
 Website adapted from <a href="https://www.cs.princeton.edu/~danqic">Danqi Chen</a>'s and <a href="https://fifalsp.github.io">Shuangping Li</a>'s.
