--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ I am a first year graduate student in the <a href="https://math.nyu.edu/dynamic/
 <br>
 My research focuses on probability theory and partial differential equations, in particular in their applications to statistical mechanics. One particular area of interest is problems that require an understanding of many length scales.
 <br>
+Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (current services that i want to show go here)
+<br>	
 </p>
 
 <hr>
@@ -189,7 +191,7 @@ My research focuses on probability theory and partial differential equations, in
 
         document.write("</ul>")
 
-
+	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="https://www.cs.princeton.edu/~danqic">here</a>.:</span>
         
 </script>
 <hr>
@@ -211,22 +213,6 @@ My research focuses on probability theory and partial differential equations, in
         
         <span style="font-family: Lato; font-size:17px;">Assistant instructor:</span>
         <li>MAT100 Calculus Foundations, Fall 2020.
-        </li>
-    </ul>
-
-<hr>
-
-<h2>Services</h2>
-<ul>
-    <li><a href="https://statistics.stanford.edu/events/probability-seminar">Stanford Probability Seminar</a> (Organizer: Spring 2023).
-    </li>
-</ul>
-
-<hr>
-
-    <h2> Notes and Expository Writing</h2>
-    <ul>
-        <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
         </li>
     </ul>
 
