--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         
 </script>
 
-	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="https://www.cs.princeton.edu/~danqic">here</a>.:</span>
+	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="https://www.cs.princeton.edu/~danqic">here</a>.</span>
 <hr>
 
     <h2> Talks</h2>
@@ -207,12 +207,12 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 <hr>
     <h2>Teaching</h2>
     <ul>
-        <span style="font-family: Lato; font-size:17px;">Instructor:</span>
+<span style="font-family: Lato; font-size:17px;">Instructor:</span>
         <li>STATS218 Introduction to Stochastic Processes II, Spring 2024.
         </li>
         <br>
         
-        <span style="font-family: Lato; font-size:17px;">Assistant instructor:</span>
+<span style="font-family: Lato; font-size:17px;">Assistant instructor:</span>
         <li>MAT100 Calculus Foundations, Fall 2020.
         </li>
     </ul>
