--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         
 </script>
 
-	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="https://www.cs.princeton.edu/~danqic">here</a>.</span>
+	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.</span>
 <hr>
 
     <h2> Talks</h2>
