--- a/Notes.html
+++ b/Notes.html
@@ -39,8 +39,25 @@ function copy(dest, source) {
 }
 </script>
 
-<body>
 <div class="container">
+<br>
+
+<div class="row">
+<div class="col-sm-5">
+<h1>Expository & Notes <span style="font-family:STFangsong; font-size:20pt">
+</div>
+
+<div class="col-sm-7">
+<div class="clearfix visible-xs-block"></div>
+<p style="font-size: 18px"><a href="https://cims.nyu.edu/dynamic/">back to homepage</a> <br>
+<br>
+
+</div>
+<!-- <div class="col-sm-2">
+<br><br><br>
+<img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
+</div> -->
+</div>
 <br>
 <h2> Notes and Expositiory Writing</h2>
 <ul>
