--- a/Notes.html
+++ b/Notes.html
@@ -43,13 +43,13 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
-<div class="col-sm-5">
+<div class="col-sm-7">
 <h1>Expository & Notes <span style="font-family:STFangsong; font-size:20pt">
 </div>
 
-<div class="col-sm-7">
+<div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<p style="font-size: 18px"><a href="https://cims.nyu.edu/dynamic/">back to homepage</a> <br>
+<p style="font-size: 18px"><a href="index.html">[back to homepage]</a> <br>
 <br>
 
 </div>
