--- a/Notes.html
+++ b/Notes.html
@@ -49,8 +49,7 @@ function copy(dest, source) {
 
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<p style="font-size: 18px"><a href="index.html">[back to homepage]</a> <br>
-<br>
+<p style="font-size: 18px"><a href="index.html">[back to homepage]</a>
 
 </div>
 <!-- <div class="col-sm-2">
