--- a/Notes.html
+++ b/Notes.html
@@ -49,7 +49,7 @@ function copy(dest, source) {
 
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<p style="font-size: 18px"><a href="index.html">[back to homepage]</a>
+<h1> style="font-size: 18px"><a href="index.html">[back to homepage]</a>
 
 </div>
 <!-- <div class="col-sm-2">
@@ -58,7 +58,6 @@ function copy(dest, source) {
 </div> -->
 </div>
 <br>
-<hr>
 <ul>
     <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
     </li>
