--- a/Notes.html
+++ b/Notes.html
@@ -49,7 +49,7 @@ function copy(dest, source) {
 
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<h1> style="font-size: 18px"><a href="index.html">[back to homepage]</a>
+<h1> <a href="index.html">[back to homepage]</a> <span style="font-family:STFangsong; font-size:10pt">
 
 </div>
 <!-- <div class="col-sm-2">
@@ -57,12 +57,10 @@ function copy(dest, source) {
 <img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
 </div> -->
 </div>
-<br>
 <ul>
     <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
     </li>
 </ul>
-<br>
 <!--<a href="chinese.html">中文版</a>-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
