--- a/Notes.html
+++ b/Notes.html
@@ -45,6 +45,7 @@ function copy(dest, source) {
 <div class="row">
 <div class="col-sm-7">
 <h1>Expository & Notes <span style="font-family:STFangsong; font-size:20pt">
+<p <a href="index.html">[back to homepage]</a>
 </div>
 
 <div class="col-sm-5">
