--- a/Notes.html
+++ b/Notes.html
@@ -44,7 +44,8 @@ function copy(dest, source) {
 
 <div class="row">
 <div class="col-sm-7">
-<h1>Expository & Notes <span style="font-family:STFangsong; font-size:20pt">
+<h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
+<br>
 <p> <a href="index.html">[back to homepage]</a></p>
 </div>
 
